@@ -19,6 +19,7 @@ use parent (qw(
    DBIx::Class::Helper::ResultSet::Shortcut::ResultsExist
    DBIx::Class::Helper::ResultSet::Shortcut::Rows
    DBIx::Class::Helper::ResultSet::Shortcut::Page
+   DBIx::Class::Helper::ResultSet::Shortcut::Search
 ));
 
 1;
@@ -161,6 +162,28 @@ calling C<< $rs->count >>.
 Uses C<EXISTS> SQL function to check if the query would return anything.
 Possibly lighter weight than the much more common C<< foo() if $rs->count >>
 idiom.
+
+=method null(@columns || \@columns)
+
+ $rs->null('status');
+ $rs->null(['status', 'title']);
+
+=method not_null(@columns || \@columns)
+
+ $rs->not_null('status');
+ $rs->not_null(['status', 'title']);
+
+=method like($column || \@columns, $cond)
+
+ $rs->like('lyrics', '%zebra%');
+ $rs->like(['lyrics', 'title'], '%zebra%');
+
+=method not_like($column || \@columns, $cond)
+
+ $rs->not_like('lyrics', '%zebra%');
+ $rs->not_like(['lyrics', 'title'], '%zebra%');
+
+=cut
 
 =head1 SEE ALSO
 
